--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "folio",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/Prakshal-Jain-Portfolio",
+  "homepage": "https://prakshal-jain.github.io/Prakshal-Jain-Portfolio",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
