--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "folio",
   "version": "0.1.0",
-  "homepage": "https://prakshal-jain.github.io/Prakshal-Jain-Portfolio/",
+  "homepage": "https://prakshal-jain.github.io/Portfolio/",
   "private": true,
   "main": "index.js",
   "dependencies": {
